test/link/section-union/align-conflict.out
FATAL: Section "conflicting alignment" is defined with 4-byte alignment (offset 0), but also with address $cafe
    at section-union/align-conflict.asm(7)
    and also:
    at section-union/align-conflict.asm(7)
Linking aborted with 1 error
---
error: Section already declared as aligned to 4 bytes (offset 0)
    at <stdin>(18)
FATAL: Cannot create section "conflicting alignment" (1 error)
    at <stdin>(18)
